samples/_failures_safe/1761375202_41243a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77646fb2.c: In function ‘print_stats’:
./samples/SAFE/__tmp_77646fb2.c:136:12: error: missing terminating " character
  136 |     printf("Most frequent
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_77646fb2.c:136:5: error: expected expression at end of input
  136 |     printf("Most frequent
      |     ^~~~~~
./samples/SAFE/__tmp_77646fb2.c:136:5: error: expected declaration or statement at end of input
